--- a/keyboardconnected.html
+++ b/keyboardconnected.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Battery power 1%</title>
-    <script src="batteryalert.js"></script>
+    <title>Keyboard K480 Connected</title>
+    <script src="keyboardconnected.js"></script>
   </head>
   <body>
   </body>
