--- a/12/14/05.html
+++ b/12/14/05.html
@@ -2,11 +2,11 @@
 <!-- ALL CSS CODE IS NOT MINE, CSS CODE IS FROM https://codepen.io/tachy0n/pen/grRYzV -->
 <html>
   <head>
-    <title> "Happy Birthday Zach! <3" </title>
+    <title> Happy Birthday Zach! &lt;3 </title>
     <link rel="stylesheet" href="TheTruthstyle.css" />
     <script src="TheTruthJS.js"></script>
   </head>
   <body>
-    <h1 style="font-size:320px;margin-top: 0px;margin-bottom: 0px;padding-top: 135px;padding-left: 25px;"> "Happy Birthday Zach! <3" </h1>
+    <h1 style="font-size:320px;margin-top: 0px;margin-bottom: 0px;padding-top: 135px;padding-left: 25px;"> Happy Birthday Zach! &lt;3 </h1>
   </body>
 </html>
