--- a/12-14-05.html
+++ b/12-14-05.html
@@ -3,10 +3,10 @@
 <html>
   <head>
     <title> Happy Birthday Zach! &lt;3 </title>
-    <link rel="stylesheet" href="TheTruthstyle.css" />
+    <link rel="stylesheet" href="TheTruthstyle.css">
     <script src="TheTruthJS.js"></script>
   </head>
   <body>
-    <h1 style="font-size:320px;margin-top: 0px;margin-bottom: 0px;padding-top: 135px;padding-left: 25px;"> Happy Birthday Zach! &lt;3 </h1>
-  </body>
+    <center> <h1 style="font-size:200px;margin-top: 0px;margin-bottom: 0px;padding-top: 0px;padding-left: 25px;"> Happy Birthday Zach! &lt;3 </h1> </center>
+   </body>
 </html>
