--- a/batteryalert.html
+++ b/batteryalert.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Battery power 1%</title>
-    <script src="batteryalert.js"></script>
+    <script>alert('Battery power 1% \nCharge your phone now');</script>
   </head>
   <body>
   </body>
