--- a/keyboardconnected.html
+++ b/keyboardconnected.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Keyboard K480 Connected</title>
-    <script src="keyboardconnected.js"></script>
+    <script>alert('Keyboard K480 Connected');</script>
   </head>
   <body>
   </body>
