--- a/TheTruth.html
+++ b/TheTruth.html
@@ -15,7 +15,7 @@
       
     <title>Your Mom</title>
     <link rel="stylesheet" href="TheTruthstyle.css" />
-    <script src="TheTruthJS.js"></script>
+    <script>console.log("ALL CSS CODE IS NOT MINE, CSS CODE IS FROM https://codepen.io/tachy0n/pen/grRYzV");</script>
   </head>
   <body>
     <h1 style="font-size:320px;margin-top: 0px;margin-bottom: 0px;padding-top: 135px;padding-left: 25px;">Your Mom</h1>
