--- a/batteryalert.html
+++ b/batteryalert.html
@@ -2,7 +2,10 @@
 <html>
   <head>
     <title>Battery power 1%</title>
-    <script>alert('Battery power 1% \nCharge your phone now');</script>
+    <script>
+alert('Battery power 1% \nCharge your phone now');
+close();
+</script>
   </head>
   <body>
   </body>
