--- a/batteryalert.html
+++ b/batteryalert.html
@@ -4,7 +4,7 @@
     <title>Battery power 1%</title>
     <script>
 alert('Battery power 1% \nCharge your phone now');
-close();
+window.close();
 </script>
   </head>
   <body>
